DEBUG: update file name for buttons

--- a/WEB/plugins.html
+++ b/WEB/plugins.html
@@ -92,14 +92,14 @@ EuG&egrave;ne documentation).<br>
   		    <br>
   		    Plugins are presented in 4 categories:<br>
   		    <img src="Images/puce.jpg" width="10">
-  <a href="plug_all.html#signal_plugins">Signal plugins</a><br>
+  <a href="plugins.html#signal_plugins">Signal plugins</a><br>
   		    <img src="Images/puce.jpg" width="10">
-  <a href="plug_all.html#content_plugins">Content plugins</a><br>
+  <a href="plugins.html#content_plugins">Content plugins</a><br>
   		    <img src="Images/puce.jpg" width="10">
-  <a href="plug_all.html#mixed_signal_content_plugins">Mixed signal/content
+  <a href="plugins.html#mixed_signal_content_plugins">Mixed signal/content
 plugins</a><br>
   		    <img src="Images/puce.jpg" width="10">
-  <a href="plug_all.html#others_plugins">Others plugins</a><br>
+  <a href="plugins.html#others_plugins">Others plugins</a><br>
    		  </td>
   		</tr>
   	             
