--- a/WEB/links.html
+++ b/WEB/links.html
@@ -225,7 +225,7 @@
 		    <font size="-1">
 		      Questions, commentaries, impressions, bug reports :
 		      contact the
-		      <a href="mailto:eugene@ossau.toulouse.inra.fr">EuGène team</a>.
+		      <a href="mailto:eugene __at__ ossau __dot__ toulouse __dot__ inra __dot__ fr">EuGène team</a>.
 		      </font> <br> <br> 
 		  </td>
 		</tr>
