Add web site adress of SpliceMachine

--- a/WEB/plugins.html
+++ b/WEB/plugins.html
@@ -242,7 +242,10 @@ ATG scoring accordingly.</font><br>
   				  <td align="justify"> 				    <font size="-1"> Injects possible signals
 as predicted by Splice Machine program.</font> </td>
   				  <td><font size="-1">SpliceMachine</font></td>
-  				  <td align="center">-</td>
+  				  <td align="center"> <a href="http://bioinformatics.psb.ugent.be/webtools/splicemachine/"> 				
+     <img width="16" src="Images/world.jpg"
+ border="0" alt="SpliceMachine" height="16">
+                        </a></td>
   				</tr>
    				<tr class="A1">
   				  <td><font size="-1">SpliceWAM</font></td>
