--- a/WEB/index.html
+++ b/WEB/index.html
@@ -112,7 +112,7 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
-			      Version 3.0: under the <a href="http://www.opensource.org/licenses/artistic-license.php">Artistic License</a><br>
+			      Since v3.0: under the <a href="http://www.opensource.org/licenses/artistic-license.php">Artistic License</a><br>
 			      GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
 			      New <a href=plugins.html>plugins</a>: AnnotaStruct, PepSignal<br>
 			    </font> 
@@ -131,8 +131,9 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
-			      eugene 3.0 : Oct. 2004<br>
-			      EuGene Web : Oct. 19 2004
+			      eugene v3.1 : Feb. 2005<br>
+			      eugene v3.0 : Oct. 2004<br>
+			      EuGène Web : Feb. 3 2005
 			    </font><br>
 			    <img src="Images/accoOff.jpg" height="15"
 				 width="190">
