Debug: correct the Javascript directory name

--- a/WEB/orga_ara.html
+++ b/WEB/orga_ara.html
@@ -5,7 +5,7 @@
     <link rel="SHORTCUT ICON" href="Images/eg.jpg">
     <link rel="STYLESHEET" type="text/css" href="Style/eugene.css">
 
-    <script language="JavaScript1.2" src="Javasripts/slide.js">
+    <script language="JavaScript1.2" src="Javascripts/slide.js">
       /************************************************************************
       NewsSlideFade 
       *   Copyright (C) 2001 Thomas Brattli
@@ -17,7 +17,7 @@
       *   Made by Thomas Brattli
       ************************************************************************/
     </script>
-    <script language="JavaScript1.2" src="Javasripts/coolmenus4.js">
+    <script language="JavaScript1.2" src="Javascripts/coolmenus4.js">
       /************************************************************************
       Copyright (c) 2001 Thomas Brattli (webmaster@dhtmlcentral.com)
       
@@ -35,7 +35,7 @@
       Item properties : http://coolmenus.dhtmlcentral.com/properties.asp?m=50
       ************************************************************************/
     </script>
-    <script language="JavaScript1.2" src="Javasripts/cm_addins.js">
+    <script language="JavaScript1.2" src="Javascripts/cm_addins.js">
       /************************************************************************
       Copyright (c) 2001 Thomas Brattli (webmaster@dhtmlcentral.com)
       Coolmenus add-in file for more advanced featuers..
@@ -45,7 +45,7 @@
 
   <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"
 	bgcolor="white">
-    <script language="JavaScript1.2" src="Javasripts/euG_menu.js">
+    <script language="JavaScript1.2" src="Javascripts/euG_menu.js">
     </script>
     
     <!-- Bug netscape 4
