Add ballon help display. Remove undisplayed info with Thomas mail adress.

--- a/WEB/plugins.html
+++ b/WEB/plugins.html
@@ -45,13 +45,26 @@
       Coolmenus add-in file for more advanced featuers..
       ************************************************************************/
     </script>
+
+   <script type="text/javascript" src="Javascripts/bulle.js">
+      /************************************************************************
+      Les info bulle
+      ************************************************************************/
+    </script>
+   <script type="text/javascript">
+       function OuvrirPopup(page,nom,option) {window.open(page,nom,option);}
+    </script>
+
 </head>
   <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"
  bgcolor="white">
        
 <script language="JavaScript1.2" src="Javascripts/euG_menu.js">
     </script>  
-         <!-- Bug netscape 4
+<script type="text/javascript">InitBulle("black","#FFCC66","orange",1);
+    </script>
+
+<!-- Bug netscape 4
   <div id="divNewsCont">
   <div id="divNews">
   </div>
