--- a/WEB/sensorUser.html
+++ b/WEB/sensorUser.html
@@ -2,9 +2,7 @@
   <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
     <head>
       <title>EuGene: User information</title>
-      <link rev="made" href="mailto:tschiex@toulouse.inra.fr" />
-        <link rel="stylesheet" type="text/css"
-              href="../IM_CSS_JS_EX/bleu.css" />
+    </head>
 	  <body>
 	    <table align=center width=100% border=0 CELLSPACING=2
 	      CELLPADDING=2>
