--- a/WEB/index.html
+++ b/WEB/index.html
@@ -131,6 +131,7 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
+			      eugene v3.3 : Sep. 2005<br>
 			      eugene v3.2 : Apr. 2005<br>
 			      eugene v3.1 : Feb. 2005<br>
 			      eugene v3.0 : Oct. 2004<br>
