minimal site update

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -93,7 +93,7 @@
 		    start...) prediction software, similarity with 
 		    existing sequences (EST, mRNA, 5'/3' EST from full 
 		    length mRNA, proteins, genomic homologuous 
-		    sequences)... Based on all the available information,
+		    sequences) and output of existing gene finders... Based on all the available information,
 		    EuGène will output a prediction of maximal score i.e.,
 		    maximally consistent with the information provided.
 		  </td>	 
@@ -131,11 +131,12 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
+			      eugene v3.4 : Dec. 2006<br>
 			      eugene v3.3 : Sep. 2005<br>
 			      eugene v3.2 : Apr. 2005<br>
 			      eugene v3.1 : Feb. 2005<br>
 			      eugene v3.0 : Oct. 2004<br>
-			      EuGène Web : Feb. 3 2005
+			      EuGène Web : Dec. 19 2006
 			    </font><br>
 			    <img src="Images/accoOff.jpg" height="15"
 				 width="190">
