--- a/WEB/index.html
+++ b/WEB/index.html
@@ -87,9 +87,9 @@
 		    probabilistic models like Markov models for 
 		    discriminating coding from non coding sequences or 
 		    to discriminate effective splice sites from false 
-		    splice sites (using so-called Window Array Models). 
+		    splice sites (using various mathematical models). 
 		    Beyond this EuGène is able to integrate information 
-		    from several signal (splice site, traduction 
+		    from several signal (splice site, translation
 		    start...) prediction software, similarity with 
 		    existing sequences (EST, mRNA, 5'/3' EST from full 
 		    length mRNA, proteins, genomic homologuous 
@@ -112,8 +112,9 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
-			      Since v3.0: under the <a href="http://www.opensource.org/licenses/artistic-license.php">Artistic License</a><br>
-			      GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
+			      Hundreds of new A. thaliana genes predicted by EuGene validated by RACE at TIGR and included in TAIR 6 [<a href="http:/
+/www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">publication</a>]<br>
+			      Developed using GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
 			      New <a href=plugins.html>plugins</a>: AnnotaStruct, PepSignal<br>
 			    </font> 
 			  </td>
@@ -179,8 +180,8 @@
 		    EuGène has been used extensively on the
 		    <a href="orga_ara.html">Arabidopsis</a> 
 		    genome where it has shown its excellent prediction 
-		    quality. It is currently extended to 
-		    <a href="organisms.html">other plant</a> 
+		    quality. Recent updates of TAIR include hundreds of new genes predicted by EuGene which have been validated by RACE by TIGR [<a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">Reference</a>]. It has been adapted to 
+		    <a href="organisms.html">other plant</a> and related 
 		    organims. EuGène has been developped with funding from
 		    <a href="http://www.inra.fr/">INRA</a> and 
 		    <a href="http://www.genoplante.com/htm/prehome.html">
