Adding meta keywords

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <meta name="keywords" content="gene finding, gene prediction, integrative">
     <title>EuGene : A Gene Finding Software</title>
     <link rel="SHORTCUT ICON" href="Images/eg.jpg">
     <link rel="STYLESHEET" type="text/css" href="Style/eugene.css">
