*** empty log message ***

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -113,7 +113,7 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
-			      Hundreds of new A. thaliana genes predicted by EuGene validated by RACE at TIGR and included in TAIR 6 [<a href="http:/
+			      Hundreds of new A. thaliana genes predicted by<br> EuGene validated by RACE at<br> TIGR and included in TAIR 6 [<a href="http:/
 /www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">publication</a>]<br>
 			      Developed using GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
 			      New <a href=plugins.html>plugins</a>: AnnotaStruct, PepSignal<br>
