*** empty log message ***

--- a/WEB/references.html
+++ b/WEB/references.html
@@ -94,7 +94,7 @@
 		      href="http://www.inra.fr/mia/T/schiex/Export/LNCS-EuGene.pdf">EuGene:
 		      An Eucaryotic Gene Finder that combines several
 		      sources of evidence.</a> T. Schiex, A. Moisan
-		      and P. RouzÃ©.  Computatonal Biology,
+		      and P. Rouzé.  Computational Biology,
 		      Eds. O. Gascuel and M-F. Sagot, LNCS 2066,
 		      pp. 111-125, 2001.  </font> <br> <br>
 		  </td>
