*** empty log message ***

--- a/WEB/links.html
+++ b/WEB/links.html
@@ -89,7 +89,7 @@
 		  <td>
 		    <img src="Images/puce_flech.jpg"> &nbsp;
 		    <font size="-1">
-		      <a href="http://atg/bioinfo/eugene/EuGeneHom/cgi-bin/EuGeneHom.pl">EuGene'Hom</a>
+		      <a href="http://bioinfo.genopole-toulouse.prd.fr/apps/eugene/EuGeneHom/cgi-bin/EuGeneHom.pl">EuGene'Hom</a>
 		      : a generic similarity-based gene finder using
 		      multiple homologous sequences.
 		      </font> <br> <br> 
