User and ATGPr markked as "obsolete"

--- a/WEB/plugins.html
+++ b/WEB/plugins.html
@@ -153,7 +153,7 @@ source</b></font></td>
   				  <td><font color="white" size="-1"> 				      <b>Link</b></font></td>
   				</tr>
     				<tr class="A0">
-  				  <td><font size="-1">ATGpr</font></td>
+  				  <td><font size="-1">ATGpr (obsolete)</font></td>
   				  <td align="justify"> 				    <font size="-1">Injects possible 				 
      translation starts as predicted by the 				      ATGpr program.<br>
   The 				      plugin reads the prediction of the 				      programs from 
@@ -515,7 +515,7 @@ of the 5' EST then the name of 				      the 5' EST the same thing for the
   				  <td align="center">-</td>
   				</tr>
    				<tr class="A1">
-  				  <td> <font size="-1">User</font> </td>
+  				  <td> <font size="-1">User (obsolete)</font> </td>
   				  <td align="justify"> 							    <font size="-1">Take into account 
 				      specific user information (usefull to 				      explore alternative
 gene 				      structures).<br>
