User plugin replaced by annotastruct, missing link removed,

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -149,31 +149,30 @@
 		</tr>
 		<tr>
 		  <td width="5%" align="center">
-		    <a href="doc.html#screen">
-		      <img src="Images/EugFig.png" width="400" vspace="10"></a>
+		      <img src="Images/EugFig.png" width="400" vspace="10">
 		    <br><font size=-1>EuGène graphical output</font>
 		  </td>
 		  <td colspan="2" align="justify">
-		    Each source of information is integrated in EuGène by
-		    a small independant software component, called a 
-		    "plugin". The plugin is responsible for the 
-		    integration of the information but also for plotting 
-		    the information on the graphical output of EuGène 
-		    (if needed) and can also analyze the inconsistencies 
-		    between the final prediction and the information 
-		    provided.
-		    <br><br>
-		    There exists more than <a href="plugins.html">
-		      28 plugins</a> currently but if needed EuGène's
-		    users have the ability to extend EuGène. This can be
-		    done using two different approaches. One simple
-		    approach is to use the
-		    "<a href="plugins.html#mixed_signal_content_plugins">User</a>" plugin.
-		    This plugin allows to inject information in 
-		    EuGène using a very simple langage. For the more 
-		    serious user, it is possible to write a new plugin 
-		    directly (in C++) and to load it dynamically into 
-		    EuGène (without recompilation of eugene).
+		    Each source of information is integrated in EuGène
+		    by a small independant software component, called
+		    a "plugin". The plugin is responsible for the
+		    integration of the information but also for
+		    plotting the information on the graphical output
+		    of EuGène (if needed) and can also analyze the
+		    inconsistencies between the final prediction and
+		    the information provided.  <br><br> There exists
+		    a large variety of <a href="plugins.html">plugins</a>
+		    currently but if needed EuGène's users have the
+		    ability to extend EuGène. This can be done using
+		    two different approaches. One simple approach is
+		    to use the "<a
+		    href="plugins.html#mixed_signal_content_plugins">Annotastruct</a>"
+		    plugin.  This plugin allows to inject information
+		    in EuGène using a GFF file. For the
+		    more serious user, it is possible to write a new
+		    plugin directly (in C++) and to load it
+		    dynamically into EuGène (without recompilation of
+		    eugene).
 		  </td>
 		</tr>
 		<tr>
