--- a/WEB/index.html
+++ b/WEB/index.html
@@ -133,6 +133,7 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
+			      eugene v3.5 : Sep. 2007<br>
 			      eugene v3.4 : Dec. 2006<br>
 			      eugene v3.3 : Sep. 2005<br>
 			      eugene v3.2 : Apr. 2005<br>
