ref to paper updated

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -113,10 +113,13 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
-			      Hundreds of new A. thaliana genes predicted by<br> EuGene validated by RACE at<br> TIGR and included in TAIR 6 [<a href="http:/
+			      Even more new A. thaliana genes predicted by<br> 
+			      EuGene validated by RT-PCR<br>
+			      See the [<a href="http://www.biomedcentral.com/1471-2164/8/401/abstract">paper</a>]<br>
+			      Hundreds of new A. thaliana genes predicted by<br> 
+			      EuGene validated by RACEt<br> and included in TAIR 6 [<a href="http:/
 /www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">publication</a>]<br>
 			      Developed using GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
-			      New <a href=plugins.html>plugins</a>: AnnotaStruct, PepSignal<br>
 			    </font> 
 			  </td>
 			</tr>	
