*** empty log message ***

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -117,9 +117,8 @@
 			      EuGene validated by RT-PCR<br>
 			      See the [<a href="http://www.biomedcentral.com/1471-2164/8/401/abstract">paper</a>]<br>
 			      Hundreds of new A. thaliana genes predicted by<br> 
-			      EuGene validated by RACEt<br> and included in TAIR 6 [<a href="http:/
-/www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">publication</a>]<br>
-			      Developed using GForge: <a href=http://mulcyber.toulouse.inra.fr>mulcyber</a><br>
+			      EuGene validated by RACEt<br> and included in TAIR 6 [<a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=1783852">publication</a>]<br>
+			      Developed using GForge: <a href=http://mulcyber.toulouse.inra.fr/projects/eugene>mulcyber</a><br>
 			    </font> 
 			  </td>
 			</tr>	
