*** empty log message ***

--- a/WEB/index.html
+++ b/WEB/index.html
@@ -113,6 +113,9 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
+			    TAIR9 Genome Release [June 19, 2009] contains <br>EuGene
+			    predictions (thanks to S. Aubourg, INRA-URGV)<br>
+			      See JCVI [<a href="http://www.arabidopsis.org/news/news.jsp">news</a>]<br>
 			      Even more new A. thaliana genes predicted by<br> 
 			      EuGene validated by RT-PCR<br>
 			      See the [<a href="http://www.biomedcentral.com/1471-2164/8/401/abstract">paper</a>]<br>
@@ -135,13 +138,14 @@
 			<tr>
 			  <td align="center" valign="center" nowrap>
 			    <font size=-1 color="black">
+			      eugene v3.5g : Apr. 2009 <br>
 			      eugene v3.5 : Sep. 2007<br>
 			      eugene v3.4 : Dec. 2006<br>
 			      eugene v3.3 : Sep. 2005<br>
 			      eugene v3.2 : Apr. 2005<br>
 			      eugene v3.1 : Feb. 2005<br>
 			      eugene v3.0 : Oct. 2004<br>
-			      EuGène Web : Aug. 21 2007
+			      EuGène Web : Aug. 21 2009
 			    </font><br>
 			    <img src="Images/accoOff.jpg" height="15"
 				 width="190">
